Was added creating and fetching medical records
